style start page

--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Code Quiz</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-  
+    <header class = "top-line">
+      <div>
+        <a href="default.asp">View High Scores</a>
+      </div>
+      <div>
+        <p>Time: </p>
+      </div>
+    </header>
+    <div class = "main">
+      <h1>Coding Quiz</h1>
+      <p>Try to answer the following code-related questions within the time limit.<br>
+        Keep in mind that incorrect answers will penalize your score/time<br>
+        by ten seconds!
+      </p>
+      <button id="start" class="btn">Start Quiz</button>
+    </div>
+ 
 
-  <footer>
-    <h2>Made by Amie Carroll</h2>
-  </footer>
   <script src="./assets/js/script.js"></script>
+
 </body>
 </html>
