start quiz button links to question page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
     <header class = "top-line">
       <div>
-        <a href="default.asp">View High Scores</a>
+        <a href="/score.html">View High Scores</a>
       </div>
       <div>
         <p>Time: </p>
+        <p id="countdown"></p>
       </div>
     </header>
     <div class = "main">
@@ -23,7 +24,10 @@
         Keep in mind that incorrect answers will penalize your score/time<br>
         by ten seconds!
       </p>
-      <button id="start" class="btn">Start Quiz</button>
+      
+      <!-- button link to question page -->
+      <a href="question.html" class="btn btn-start">Start Quiz</a>
+      
     </div>
  
 
