--- a/question.html
+++ b/question.html
@@ -18,13 +18,8 @@
       <p>Time: </p>
     </div>
   </header>
-  <div class="main">
-    <h1>Coding Quiz</h1>
-    <p>Try to answer the following code-related questions within the time limit.<br>
-      Keep in mind that incorrect answers will penalize your score/time<br>
-      by ten seconds!
-    </p>
-    <button id="start" class="btn">Start Quiz</button>
+  <div class="q-layout">
+    <!-- question, 4 choices of answers, line, and right/wrong are all dynamically created-->
   </div>
 
 
