--- a/score.html
+++ b/score.html
@@ -10,21 +10,11 @@
 </head>
 
 <body>
-  <header class="top-line">
-    <div>
-      <a href="default.asp">View High Scores</a>
-    </div>
-    <div>
-      <p>Time: </p>
-    </div>
-  </header>
-  <div class="main">
-    <h1>Coding Quiz</h1>
-    <p>Try to answer the following code-related questions within the time limit.<br>
-      Keep in mind that incorrect answers will penalize your score/time<br>
-      by ten seconds!
-    </p>
-    <button id="start" class="btn">Start Quiz</button>
+  <div class="scores">
+    <h1>High Scores</h1>
+    <!-- enter text box here for display of initials and score -->
+    <button id="Try-Again" class="btn">Try Again</button>
+    <button id="Clear-Scores" class="btn">Clear High Scores</button>
   </div>
 
 
