--- a/summary.html
+++ b/summary.html
@@ -18,13 +18,18 @@
       <p>Time: </p>
     </div>
   </header>
-  <div class="main">
-    <h1>Coding Quiz</h1>
-    <p>Try to answer the following code-related questions within the time limit.<br>
-      Keep in mind that incorrect answers will penalize your score/time<br>
-      by ten seconds!
-    </p>
-    <button id="start" class="btn">Start Quiz</button>
+  <div class="summary">
+    <h1>All Done!</h1>
+    <h2>Your time is over and the quiz is complete.</h2>
+    <div class = "final-score">
+      <p>Your final score is: </p>
+      <!--enter text box here for final score -->
+    </div>
+    <div class = "submit-initials">
+      <p>Enter initials: </p>
+      <!-- enter text box here for initials -->
+      <button id="submit-initials" class="btn">Submit</button>
+    </div>
   </div>
 
 
