view high scores links to scores page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class = "top-line">
       <div>
-        <a href="/score.html">View High Scores</a>
+        <a href="score.html">View High Scores</a>
       </div>
       <div>
         <p>Time: </p>
