--- a/question.html
+++ b/question.html
@@ -12,7 +12,7 @@
 <body>
   <header class="top-line">
     <div>
-      <a href="default.asp">View High Scores</a>
+      <a href="score.html">View High Scores</a>
     </div>
     <div>
       <p>Time: </p>
