questions html done

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <a href="score.html">View High Scores</a>
       </div>
       <div>
-        <p>Time: </p>
-        <p id="countdown"></p>
+        <p>Time: <span id="countdownTimer">60 </span> seconds remaining</p>
       </div>
     </header>
     <div class = "main">
