--- a/score.html
+++ b/score.html
@@ -13,7 +13,8 @@
   <div class="scores">
     <h1>High Scores</h1>
     <!-- enter text box here for display of initials and score -->
-    <button id="Try-Again" class="btn">Try Again</button>
+   <!-- <button id="Try-Again" class="btn">Try Again</button> -->
+    <a href="index.html" class="btn btn-start">Try Again</a>
     <button id="Clear-Scores" class="btn">Clear High Scores</button>
   </div>
 
