--- a/question.html
+++ b/question.html
@@ -18,13 +18,26 @@
       <p>Time: </p>
     </div>
   </header>
-  <div class="q-layout">
-    <!-- question, 4 choices of answers, line, and right/wrong are all dynamically created-->
+
+  <div id="frameTotal"> <!-- question, 4 choices of answers, line, and right/wrong are all dynamically created-->
+    <div id="showQuestion">
+      <p>Question: </p>
+    </div>  
+    <div id="showTimer">
+      <div id="showCounter"></div>
+      <div id="totalTimeGauge"></div>
+      <div id="showTimeGauge"></div>
+    </div>
+    <div id="showChoices">
+      <div class="choice" id="A" onclick="checkAnswer('A')">A</div>
+      <div class="choice" id="B" onclick="checkAnswer('B')">B</div>
+      <div class="choice" id="C" onclick="checkAnswer('C')">C</div>
+      <div class="choice" id="D" onclick="checkAnswer('D')">D</div>
+    </div>
   </div>
-
-
+  <div id="showRightOrWrong"> 
+    <div class="rightOrWrong"></div>
+  </div>
   <script src="./assets/js/script.js"></script>
-
 </body>
-
 </html>
