--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </p>
       
       <!-- button link to question page -->
-      <a href="question.html" class="btn btn-start">Start Quiz</a>
+      <a href="question.html" id="startQuiz" class="btn btn-start">Start Quiz</a>
       
     </div>
  
