--- a/question.html
+++ b/question.html
@@ -15,7 +15,7 @@
       <a href="score.html">View High Scores</a>
     </div>
     <div class = "showTimer">
-      <p>Time: <span onclick="counterTimer(timeleft)"></span> seconds remaining</p> 
+      <p>Time: <span id="countdownTimer(timeleft)"></span> seconds remaining</p> 
    
     </div>
   </header>
