timer half working

--- a/question.html
+++ b/question.html
@@ -14,13 +14,14 @@
     <div>
       <a href="score.html">View High Scores</a>
     </div>
-    <div class = "showTimer">
-      <p>Time: <span id="countdownTimer(timeleft)"></span> seconds remaining</p> 
-   
+   <!-- <div class = "showTimer"> -->
+      <p id="showTimer">Time: <span id="countdownTimer"></span> seconds remaining</p> 
     </div>
   </header>
 
   <div id="frameTotal"> <!-- question, 4 choices of answers, line, and right/wrong are all dynamically created-->
+    <p id="fred"> Time: <span id="countdownTimer"></span> seconds remaining</p>
+   
     <div id="showQuestion"></div>
     <div id="writeQuestions"></div>  
     <!-- <div id="showTimer"> -->
