timer is not working and trying to troubleshoot

--- a/summary.html
+++ b/summary.html
@@ -15,14 +15,13 @@
       <a href="score.html">View High Scores</a>
     </div>
     <div>
-      <p>Time: </p>
+      <p>Time: <span id="countdownTimer">0 </span> seconds remaining</p>
     </div>
   </header>
   <div class="summary">
     <h1>All Done!</h1>
-    <h2>Your time is over and the quiz is complete.</h2>
-    <div class = "final-score">
-      <p>Your final score is: </p>
+  <div class = "final-score">
+      <h2>Your final score is: </h2>
       <!--enter text box here for final score -->
     </div>
     <div class = "submit-initials">
