first question won't load and then index is off

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       </p>
       
       <!-- button link to question page -->
-      <a href="question.html" id="startQuiz" class="btn btn-start">Start Quiz</a>
+      <a href="question.html" id="startButton" class="btn btn-start">Start Quiz</a> 
+      <!-- <a href="question.html" id="startButton" class="btn btn-start" onclick="writeQuestions()">Start Quiz</a> 
+        line above gives same results as bad event listeners -->
       
     </div>
  
