--- a/question.html
+++ b/question.html
@@ -17,10 +17,9 @@
       <p id="showTimer">Time: <span id="countdownTimer"></span> seconds remaining</p> 
     </div>
   </header>
-<div id="frameTotal"> <!-- question, 4 choices of answers, line, and right/wrong are all dynamically created-->
+    <div id="frameTotal"> <!-- question, 4 choices of answers, line, and right/wrong are all dynamically created-->
      <div id="showQuestion"></div>
-    <div id="writeQuestions"></div>  
-      <div id="showCounter"></div>
+      <div id="showCounter"></div> <!-- may not need this-->
       <div id="totalTimeTrack"></div>
       <div id="showTimeTrack"></div>
     </div>
@@ -31,6 +30,7 @@
       <div class="choice" id="D">D</div>
     </div>
     <div id="displayRW"> 
+      <hr /> <!-- horizontal line if I have time to style and add in -->
       <div class="RW"></div>
     </div>
   </div>
