--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
       <div id="frameTotal"></div>
         <div id="showQuestion"></div>
           <div id="showChoices">
-            <div class="choice" id="A" onclick="checkAnswer('A')">A</div>
+            <!-- <div class="choice" id="A" onclick="checkAnswer('A')">A</div>
             <div class="choice" id="B" onclick="checkAnswer('B')">B</div>
             <div class="choice" id="C" onclick="checkAnswer('C')">C</div>
-            <div class="choice" id="D" onclick="checkAnswer('D')">D</div>
+            <div class="choice" id="D" onclick="checkAnswer('D')">D</div> -->
+            <div class="choice" id="A">A</div>
+            <div class="choice" id="B">B</div>
+            <div class="choice" id="C">C</div>
+            <div class="choice" id="D">D</div>
           </div>
           <div id="displayRW">
             <hr /> <!-- horizontal line if I have time to style and add in -->
