--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="totalTimeTrack"></div>
       <div id="showTimeTrack"></div>
     </header>
-    <div class = "main">
+    <div id = "main">
       <h1>Coding Quiz</h1>
       <p>Try to answer the following code-related questions within the time limit.<br>
         Keep in mind that incorrect answers will penalize your score/time<br>
@@ -31,24 +31,22 @@
       <a id="start" class="btn btn-start">Start Quiz</a> 
       <!-- <a href="question.html" id="startButton" class="btn btn-start" onclick="writeQuestions()">Start Quiz</a> 
         line above gives same results as bad event listeners -->
-      <div id="hideStartPage" style="display:none;"></div>  <!-- hide when starting quiz-->
+      
       
       <!-- question, 4 choices of answers, line, and right/wrong are all dynamically created-->
       <div id="frameTotal"></div>
         <div id="showQuestion"></div>
           <div id="showChoices">
-            <!-- <div class="choice" id="A" onclick="checkAnswer('A')">A</div>
+            <div class="choice" id="A" onclick="checkAnswer('A')">A</div>
             <div class="choice" id="B" onclick="checkAnswer('B')">B</div>
             <div class="choice" id="C" onclick="checkAnswer('C')">C</div>
-            <div class="choice" id="D" onclick="checkAnswer('D')">D</div> -->
-            <div class="choice" id="A">A</div>
+            <div class="choice" id="D" onclick="checkAnswer('D')">D</div>
+            <!-- <div class="choice" id="A">A</div>
             <div class="choice" id="B">B</div>
             <div class="choice" id="C">C</div>
-            <div class="choice" id="D">D</div>
+            <div class="choice" id="D">D</div> -->
           </div>
-          <div id="displayRW">
-            <hr /> <!-- horizontal line if I have time to style and add in -->
-          <div class="RW"></div>
+          <div id="displayRW"></div>
         </div>
       </div>
     </div>
