--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         by ten seconds!
       </p>
       <!-- button link to question page -->
-      <a id="start" class="btn btn-start">Start Quiz</a> 
+      <a id="start" class="btn btn-start" onclick="startQuiz()">Start Quiz</a> 
       <!-- <a href="question.html" id="startButton" class="btn btn-start" onclick="writeQuestions()">Start Quiz</a> 
         line above gives same results as bad event listeners -->
       
