--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0" /> 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Code Quiz</title>
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -27,7 +27,7 @@
         Keep in mind that incorrect answers will penalize your score/time<br>
         by ten seconds!
       </p>
-      <!-- button link to question page -->
+      <!-- button link to start quiz-->
       <a id="start" class="btn btn-start" onclick="startQuiz()">Start Quiz</a> 
       <!-- <a href="question.html" id="startButton" class="btn btn-start" onclick="writeQuestions()">Start Quiz</a> 
         line above gives same results as bad event listeners -->
