screen formatting fixed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- enter text box here for initials -->
         <!-- <button id="submit-initials" class="btn">Submit</button>
       </div>
-    </div> --> -->
+    </div> --> 
     <!--//on message of "You answered " + right + " out of " + arrQuestions.length + " correctly." -->
 
     <!-- End Summary Section -->
