includes showScores with errors

--- a/index.html
+++ b/index.html
@@ -46,20 +46,19 @@
     <!-- End Question Section -->
 
     <!-- Begin Summary Section -->
-    <!-- <div id="summaryScreen" class="summary">
+    <div id="summaryScreen" class="summary">
       <h1>All Done!</h1>
       <div class="final-score">
-        <h2>Your final score is: </h2> -->
+     <!-- <h2>Your final score is: <span>"timeLeft"</span></h2> -->
         <!-- enter text box here for final score -->
-      <!-- </div>
-      <div class="submit-initials">
-        <p>Enter initials: </p> -->
-        <!-- enter text box here for initials -->
-        <!-- <button id="submit-initials" class="btn">Submit</button>
-      </div>
-    </div> --> 
-    <!--//on message of "You answered " + right + " out of " + arrQuestions.length + " correctly." -->
-
+      <!-- </div> -->
+    <div class="submit-initials">
+      <!--<p>Enter initials: </p> -->
+      <!-- enter text box here for initials -->
+      <button id="submit-initials" class="btn">Submit Initials</button>
+      <a href="index.html" class="btn btn-start">Try Again</a>
+       </div>
+    </div>
     <!-- End Summary Section -->
     
   <!-- link to JS file -->  
