--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="summaryScreen" class="summary">
       <h1>All Done!</h1>
       <div class="final-score">
-      <h2>Your final score is: <span>"timeLeft"</span></h2> 
+      <h2 id="finalScore"></h2> 
         <!-- enter text box here for final score -->
     </div> 
     <div class="submit-initials"> 
